--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php":                            ">=5.3.2",
         "psr/log":                        "~1.0",
         "symfony/framework-bundle":       "~2.2",
-        "polem/departements":             "dev-master@dev"
+        "polem/departements":             "dev-master"
     },
     "require-dev": {
         "sensio/framework-extra-bundle":  "~2.2",
