--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php":                            ">=5.3.2",
         "psr/log":                        "~1.0",
         "symfony/framework-bundle":       "~2.2",
-        "polem/departements":             "dev-master"
+        "polem/departements":             "~0.0"
     },
     "require-dev": {
         "symfony/form":                   "~2.4",
